TERMINANDO PROBLEMAS SERVIDOR

--- a/index.html
+++ b/index.html
@@ -178,19 +178,19 @@ var cdp_cookies_info = {"url_plugin":"http:\/\/www.amebacomunicacion.com\/wp-con
 			  </div>
 			  </div>
 			</li>
-			<li id="nav-menu-item-16549" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children  has_sub narrow"><a href="http://www.amebacomunicacion.com/estudio-diseno-web-y-marketing-digital-alicante/" class=""><i class="menu_icon blank fa"></i><span>CONÓCENOS</span><span class="plus"></span></a>
+			<li id="nav-menu-item-16549" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children  has_sub narrow"><a href="#" class=""><i class="menu_icon blank fa"></i><span>CONÓCENOS</span><span class="plus"></span></a>
 			  <div class="second"><div class="inner"><ul>
-				<li id="nav-menu-item-16550" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="http://www.amebacomunicacion.com/estudio-diseno-web-y-marketing-digital-alicante/" class=""><i class="menu_icon blank fa"></i><span>QUIÉNES SOMOS</span><span class="plus"></span></a></li>
-				<li id="nav-menu-item-16698" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="http://www.amebacomunicacion.com/estudio-diseno-web-y-marketing-digital-alicante/proyectos/" class=""><i class="menu_icon blank fa"></i><span>NUESTRO TRABAJO</span><span class="plus"></span></a></li>
-				<li id="nav-menu-item-17627" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="http://www.amebacomunicacion.com/estudio-diseno-web-y-marketing-digital-alicante/clientes/" class=""><i class="menu_icon blank fa"></i><span>CLIENTES</span><span class="plus"></span></a></li>
-				<li id="nav-menu-item-17726" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="http://www.amebacomunicacion.com/estudio-diseno-web-y-marketing-digital-alicante/por-que-ameba/" class=""><i class="menu_icon blank fa"></i><span>POR QUÉ AMEBA</span><span class="plus"></span></a></li>
-				<li id="nav-menu-item-17613" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="http://www.amebacomunicacion.com/estudio-diseno-web-y-marketing-digital-alicante/premios-web-alicante/" class=""><i class="menu_icon blank fa"></i><span>PREMIOS</span><span class="plus"></span></a></li>
+				<li id="nav-menu-item-16550" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="#" class=""><i class="menu_icon blank fa"></i><span>QUIÉNES SOMOS</span><span class="plus"></span></a></li>
+				<li id="nav-menu-item-16698" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="#" class=""><i class="menu_icon blank fa"></i><span>NUESTRO TRABAJO</span><span class="plus"></span></a></li>
+				<li id="nav-menu-item-17627" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="#" class=""><i class="menu_icon blank fa"></i><span>CLIENTES</span><span class="plus"></span></a></li>
+				<li id="nav-menu-item-17726" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="#" class=""><i class="menu_icon blank fa"></i><span>POR QUÉ AMEBA</span><span class="plus"></span></a></li>
+				<li id="nav-menu-item-17613" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="#" class=""><i class="menu_icon blank fa"></i><span>PREMIOS</span><span class="plus"></span></a></li>
 			  </ul>
 			  </div>
 			  </div>
 			</li>
-			<li id="nav-menu-item-17339" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="http://www.amebacomunicacion.com/contacto/" class=""><i class="menu_icon blank fa"></i><span>CONTACTO</span><span class="plus"></span></a></li>
-			<li id="nav-menu-item-16730" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="http://www.amebacomunicacion.com/blog-diseno-web-y-marketing-digital/" class=""><i class="menu_icon blank fa"></i><span>BLOG</span><span class="plus"></span></a></li>
+			<li id="nav-menu-item-17339" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="#" class=""><i class="menu_icon blank fa"></i><span>CONTACTO</span><span class="plus"></span></a></li>
+			<li id="nav-menu-item-16730" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="#" class=""><i class="menu_icon blank fa"></i><span>BLOG</span><span class="plus"></span></a></li>
 		    </ul>
 		    </nav>
 		    <nav class="mobile_menu">
